dark mode trasition fixed

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ body {
     z-index: 2;
     background-color: #33373e;
     padding: 0 0 0 2px;
+    transition-duration: 0.3s;
+    transition-timing-function: linear;
 }
 
 
@@ -760,6 +762,8 @@ body.minimize_siderbar .section_one_movieDetail {
 .sidenav_child_container {
     width: 5rem;
     height: 100%;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 }
 
 
@@ -1329,8 +1333,6 @@ body.light .menu ul li.hovered {
 
     .sidenav_container {
         width: 5rem;
-        border: solid #101010c7;
-        border-width: 0px 1px 0px 0px;
         transition-duration: 0.5s;
         transition-timing-function: linear;
         display: none;
@@ -1393,6 +1395,12 @@ body.light .menu ul li.hovered {
     body.light .pathh {
         fill: rgb(136, 136, 136);
     }
+
+    body.light .pathhphone {
+        fill: rgb(255, 255, 255);
+    }
+
+
 
     .overlay_side_navabar_activate {
         display: block;
@@ -1714,9 +1722,6 @@ body.light .menu ul li.hovered a ::after {
     transition-duration: 0.2s;
 
 }
-
-
-
 
 
 .menu ul li:hover,
